<resources>
    <string name="app_name">AlloEatsClientApp</string>
    <string name="ws_Password">FeNBGjzDG354@ofe*$32Rfsss4F</string>

    <!-- LoginActivity -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password must have at least 8 characters with a number and a letter</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="facebook_app_id">166817300640477</string>
    <string name="fb_login_protocol_scheme">fb166817300640477</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="facebook_sign_in">Continue with Facebook</string>
    <string name="google_sign_in">Continue with Google</string>
    <string name="twitter_sign_in">Continue with Twitter</string>
    <string name="loginActivity_textView_headline_text">Please choose one way to log in</string>
    <string name="alloeats_title">AlloEats</string>

    <!-- CreateAccountActivity -->
    <string name="title_textView">Please create your account</string>
    <string name="email_address_textView">Email Address:</string>
    <string name="password_textView">Password:</string>
    <string name="firstName_textView">First Name:</string>
    <string name="lastName_textView">Last Name:</string>
    <string name="country_textView">Country:</string>
    <string name="city_textView">City:</string>
    <string name="address_textView">Address:</string>
    <string name="zipCode_textView">Zip Code:</string>
    <string name="phoneNumber_textView">Phone Number:</string>
    <string name="email_address_textView_ContentDesc">Email Address</string>
    <string name="password_textView_hint">Password</string>
    <string name="firstName_textView_hint">First Name</string>
    <string name="lastName_textView_hint">Last Name</string>
    <string name="country_textView_hint">Country</string>
    <string name="city_textView_hint">City Country</string>
    <string name="address_textView_hint">Address</string>
    <string name="zipCode_textView_hint">Zip Code</string>
    <string name="phoneNumber_textView_hint">Phone Number</string>
    <string name="abort_button">Abort</string>
    <string name="register_button">Register</string>

    <!-- MainActivity -->
    <string name="action_settings">Settings</string>
    <string name="logout_button">Logout</string>
    <string name="title_activity_settings">Settings</string>
    <string name="restaurant_finder_item">Restaurant Finder</string>
    <string name="favorites_item">Favorites</string>
    <string name="settings_item">Settings</string>
    <string name="logout_item">Logout</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main">AlloEats</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="restaurant_imageView_description">Main photo of the restaurant</string>
    <string name="restaurant_address_name">Address:</string>
    <string name="restaurant_rating_name">Rating:</string>
    <string name="restaurant_is_open_name">Is Open:</string>
    <string name="restaurant_name_name">Name:</string>
  <string name="orders_item">My orders</string>
</resources>
