<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/maps_item" />

        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/favorites_item" />

        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/settings_item" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_sync_black_24dp"
            android:title="@string/logout_item"/>
    </group>

</menu>
