<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/tw__blue_pressed"
    tools:context="fr.esgi.alloeatsclientapp.activities.LoginActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:fontFamily="cursive"
        android:text="@string/alloeats_title"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="44sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/logIn_title_TextView"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:text="@string/loginActivity_textView_headline_text"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/background_light" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="6"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@android:color/background_light" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@android:style/Widget.Material.Button"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="30dp"
                android:background="@android:color/holo_orange_dark"
                android:text="@string/action_sign_in"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="18sp" />


            <Button
                android:id="@+id/facebook_login_button"
                style="@style/com_facebook_button_share"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/com_facebook_button_background"
                android:elevation="0dp"
                android:text="@string/facebook_sign_in"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/google_login_button"
                style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:background="@drawable/common_google_signin_btn_text_dark_normal"
                android:text="@string/google_sign_in"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="14sp" />

            <Button
                android:id="@+id/twitter_login_button"
                style="@style/FirebaseUI.Button.AccountChooser.TwitterButton"
                android:layout_width="match_parent"
                android:layout_height="37dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:text="@string/twitter_sign_in"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
