<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:orientation="vertical"
    android:padding="0dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/restaurant_name_name"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/rating"
        app:layout_constraintEnd_toStartOf="@+id/mainPhoto"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/isOpen"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/name"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/restaurant_is_open_name"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/address"
        app:layout_constraintEnd_toStartOf="@+id/mainPhoto"
        app:layout_constraintHorizontal_bias="0.037"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/name"
        android:layout_centerVertical="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/restaurant_rating_name"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toTopOf="@+id/isOpen"
        app:layout_constraintEnd_toStartOf="@+id/mainPhoto"
        app:layout_constraintHorizontal_bias="0.036"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/address"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/restaurant_address_name"
        android:textAlignment="textStart"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/mainPhoto"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/mainPhoto"
        android:layout_width="106dp"
        android:layout_height="92dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="4dp"
        android:contentDescription="@string/restaurant_imageView_description"
        android:src="@drawable/default_restaurant_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</android.support.constraint.ConstraintLayout>